# Training

./: .gitignore  CardsTrainer.py  KeysExample.cfg  README.md  RulesTrainer.py  Trainer.py  aeon_trespass_odyssey.py  catan.py  dbrequirments.md  dune.py  eclipse_new_dawn_for_the_galaxy.py  external_comm.py  food_chain_magnet.py  htmlparser.py  json_merging.py  lorcana.py  magic_cards_loader.py  magic_rules_loader.py  main.py  mtg.py  new_game.py  paladins_of_the_west_kingdom.py  pkgx.yaml  pyproject.toml  requirements.txt  train.py
training/: __main__.py  train.py
training/train_games/: aeon_trespass_odyssey.py  catan.py  dune.py  eclipse_new_dawn_for_the_galaxy.py  lorcana.py  mtg.py  paladins_of_the_west_kingdom.py  train_game.py
