[tool.poetry]
name = "magicaitrainer"
version = "0.1.0"
description = ""
authors = ["j1philli"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
langchain = "^0"
openai = "^0.27.8"
supabase = "^1.0.3"
tqdm = "^4.66.1"
simple-term-menu = "^1.6.1"
beautifulsoup4 = "^4.12.2"
jq = "^1.5.0"
tiktoken = "^0.5.1"
rich = "^13.6.0"
pypdf = "^3.16.4"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
